--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ server/www/app/tmp/cache/models/myapp_cake_model_default_uqmarkup__attachments
 server/www/app/tmp/cache/models/myapp_cake_model_default_uqmarkup__roles
 
 server/www/app/tmp/cache/models/myapp_cake_model_default_uqmarkup_adminusers
+
+server/www/app/tmp/cache/models/myapp_cake_model_default_uqmarkup__rubrics
+
+server/www/app/tmp/cache/models/myapp_cake_model_default_uqmarkup__tags
+
+server/www/app/tmp/cache/persistent/myapp_cake_core_default_en-us
