--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ server/www/app/tmp/cache/models/myapp_cake_model_default_uqmarkup__tags
 server/www/app/tmp/cache/persistent/myapp_cake_core_default_en-us
 
 iOS/Markup2/SecretKey.plist
+
+*.xcuserstate
