Remove old code

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ server/www/.idea/www.iml
 .idea/workspace.xml
 
 .idea/cake_config_setting_v0_6.xml
+
+.idea/dictionaries/simultech.xml
+
+.idea/inspectionProfiles/Project_Default.xml
