Remove commends from rubric controller

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ server/www/.idea/www.iml
 .idea/dictionaries/simultech.xml
 
 .idea/inspectionProfiles/Project_Default.xml
+
+iOS/uqmarkup.xcodeproj/project.xcworkspace/xcuserdata/nurmerey.xcuserdatad/UserInterfaceState.xcuserstate
